# GraphSmoothing

./: CMakeLists.txt  Main.cpp  README.md  Way.cpp  Way.sln  WayHeader.h  modifiedWay.txt  way.txt
Project/: CMakeLists.txt  moc_editor.cpp
Project/Source/: editor.cpp  editor.h  editor.ui
Project/Source/t/: editor.cpp
Project1/Source/: editor.cpp  editor.h  editor.ui  main.cpp
Project2/: CMakeLists.txt
Project2/Source/: CMakeLists.txt  editor.cpp  editor.h  editor.ui  t.txt
TestsForProject/: wayqt.txt  wayqt1.txt  wayqt3.txt  wayqt5.txt
Way/: CMakeLists.txt  Main.cpp  Way.cpp
Way/Sourse/: CMakeLists.txt
Way1/: CMakeLists.txt
Way1/Sourse/: CMakeLists.txt  Main.cpp  Way.cpp  WayHeader.h
